# jarvis

./: .codex-connector-pr-check.txt  .codex-connector-readiness-check.txt  .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation-task.md
.github/workflows/: ci.yml
apps/web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
deploy/api/: Dockerfile
deploy/otel/: collector.yaml
docs/: API_V1.md  ARCHITECTURE.md  BRAIN_RUNTIME.md  DECISIONS.md  DEVELOPMENT.md  DOMAIN_STATE.md  IMPLEMENTATION_PLAN.md  M4_5_EXECUTION_SPEC.md  MODEL_GATEWAY.md  MODULE_ACCEPTANCE.md  TEST_STRATEGY.md  openapi.v1.json
scripts/: check_postgres.py  demo.sh  doctor.sh  export_openapi.py  install_git_hooks.sh  pre-commit.sh
src/jarvis/: __init__.py  api.py  api_contracts.py  api_errors.py  api_routes.py  config.py  health.py
tests/contract/: test_model_adapters.py
tests/integration/: conftest.py  test_api_graph_postgres.py  test_brain_postgres_runtime.py  test_postgres_readiness.py  test_postgres_repository.py  test_task_api_postgres.py
tests/unit/: test_api.py  test_brain_runtime.py  test_config.py  test_domain_entities.py  test_domain_validation.py  test_health.py  test_live_model_smoke.py  test_memory_repository.py  test_migrations.py  test_model_contracts.py  test_model_errors.py  test_model_gateway.py  test_model_policy.py  test_plan_dependencies.py  test_postgres_repository_validation.py  (+3 more)
(+45 files in other folders)
